# qwop-gym

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  qwop-gym.py  requirements.txt  wandb-agent.py
config/: benchmark.yml  env.yml  play.yml  record.yml  replay.yml  spectate.yml  train_airl.yml  train_bc.yml  train_dqn.yml  train_gail.yml  train_ppo.yml  train_qrdqn.yml
config/wandb/: dqn.yml  gail.yml  ppo.yml  qrdqn.yml
doc/: bootstrap.puml  communication.puml  env.md  game.md  messages.puml  play.puml  replay.puml  train.puml
qwop_gym/: __init__.py
qwop_gym/envs/v1/: qwop_env.py
qwop_gym/envs/v1/game/: extensions.js  ws.js
qwop_gym/envs/v1/util/: log.py  wsclient.py  wsserver.py
qwop_gym/tools/: benchmark.py  bootstrap.py  common.py  main.py  patch.py  perftest.py  play.py  replay.py  spectate.py  train_adversarial.py  train_bc.py  train_sb3.py
qwop_gym/tools/templates/: benchmark.yml  env.yml  play.yml  record.yml  replay.yml  spectate.yml  spectate_record.yml  train_a2c.yml  train_bc.yml  train_gail.yml  train_ppo.yml  train_qrdqn.yml  train_rppo.yml
qwop_gym/tools/templates/wandb/: a2c.yml  dqn.yml  gail.yml  ppo.yml  qrdqn.yml  rppo.yml
qwop_gym/wrappers/: absorb_wrapper.py  record_wrapper.py  verbose_wrapper.py
src/env/v1/: qwop_env.py
src/env/v1/util/: client.py  log.py  server.py  verbose_wrapper.py  wsclient.py  wsproto.py  wsserver.py
src/game/: QWOP.html  extensions.js  patcher.py  ws.js
tools/: benchmark.py  common.py  perftest.py  play.py  record.py  replay.py  spectate.py  train_adversarial.py  train_bc.py  train_sb3.py  wandb_train.py
